<resources>
    <string name="app_name">TvWearOs</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="horas">Horas</string>
    <string name="minutos">Minutos</string>
    <string name="segundos">Segundos</string>
    <string name="temporizador">icono temporizador\n</string>
    <string name="cronometro">icono cronometro\n</string>
    <string name="pausaTemp">Pausa</string>
    <string name="iniciarTemp">Iniciar</string>
    <string name="reiniciarTemp">Reiniciar</string>
</resources>